--- a/sakura/site.yml
+++ b/sakura/site.yml
@@ -1,9 +1,10 @@
 ---
 # Add offcial repositories
-- name: nginx repository key
-  rpm_key: key=http://nginx.org/keys/nginx_signing.key state=present
+- name: EPEL repository
+  yum: name=http://ftp.jaist.ac.jp/pub/Linux/Fedora/epel/6/x86_64/epel-release-6-8.noarch.rpm status=present
 
 - name: nginx repository
   yum: name=http://nginx.org/packages/centos/6/noarch/RPMS/nginx-release-centos-6-0.el6.ngx.noarch.rpm state=present
 
-
+- name: postgresql repository
+  yum: name=http://yum.postgresql.org/9.3/redhat/rhel-6-x86_64/pgdg-centos93-9.3-1.noarch.rpm state=present
