--- a/roles/yum/tasks/main.yml
+++ b/roles/yum/tasks/main.yml
@@ -1,4 +1,4 @@
 ---
-- name: EPEL repository
+- name: EPEL repository is enabled
   yum: name=http://ftp.jaist.ac.jp/pub/Linux/Fedora/epel/6/x86_64/epel-release-6-8.noarch.rpm state=present
 
