--- a/roles/me/tasks/main.yml
+++ b/roles/me/tasks/main.yml
@@ -39,3 +39,27 @@
   with_items:
     - { conf: 'user.name', val: "{{git_username}}" }
     - { conf: 'user.email', val: "{{git_useremail}}" }
+
+- name: xbuild is cloned
+  sudo_user: "{{user}}"
+  git: repo="https://github.com/tagomoris/xbuild.git"
+    dest=/home/{{user}}/xbuild
+    executable=/usr/local/bin/git
+
+- name: ruby is installed
+  sudo_user: "{{user}}"
+  command: xbuild/ruby-install {{ruby_version}} ~/local/ruby-{{ruby_version}}
+    creates=/home/{{user}}/ruby-{{ruby_version}}
+
+- name: ruby PATH is set up
+  sudo_user: "{{user}}"
+  lineinfile: dest=/home/{{user}}/.zshenv insertafter=EOF line="export PATH=$HOME/local/ruby-{{ruby_version}}/bin:$PATH"
+
+- name: python is installed
+  sudo_user: "{{user}}"
+  command: xbuild/python-install {{python_version}} ~/local/python-{{python_version}}
+    creates=/home/{{user}}/python-{{python_version}}
+
+- name: python PATH is set up
+  sudo_user: "{{user}}"
+  lineinfile: dest=/home/{{user}}/.zshenv insertafter=EOF line="export PATH=$HOME/local/python-{{python_version}}/bin:$PATH"
