--- a/roles/postgresql/tasks/main.yml
+++ b/roles/postgresql/tasks/main.yml
@@ -1,13 +1,13 @@
 ---
 - name: postgresql repository is enabled
-  yum: name=http://yum.postgresql.org/9.3/redhat/rhel-6-x86_64/pgdg-centos93-9.3-1.noarch.rpm state=present
+  yum: name=http://yum.postgresql.org/{{postgresql_version}}/redhat/rhel-6-x86_64/pgdg-centos{{postgresql_version|replace('.','')}}-{{postgresql_version}}-1.noarch.rpm state=present
 
 - name: postgresql is installed
   yum: name={{item}} state=present
   with_items:
-    - postgresql93
-    - postgresql93-contrib
-    - postgresql93-devel
-    - postgresql93-libs
-    - postgresql93-python
-    - postgresql93-server
+    - postgresql{{postgresql_version|replace('.','')}}
+    - postgresql{{postgresql_version|replace('.','')}}-contrib
+    - postgresql{{postgresql_version|replace('.','')}}-devel
+    - postgresql{{postgresql_version|replace('.','')}}-libs
+    - postgresql{{postgresql_version|replace('.','')}}-python
+    - postgresql{{postgresql_version|replace('.','')}}-server
