--- a/roles/postgresql/tasks/main.yml
+++ b/roles/postgresql/tasks/main.yml
@@ -11,3 +11,7 @@
     - postgresql{{postgresql_version|replace('.','')}}-libs
     - postgresql{{postgresql_version|replace('.','')}}-python
     - postgresql{{postgresql_version|replace('.','')}}-server
+
+- name: postgresql PATH is set up
+  sudo_user: "{{user}}"
+  lineinfile: dest=/home/{{user}}/.zshenv insertafter=EOF line="export PATH=/usr/pgsql-{{postgresql_version}}/bin:$PATH"
