--- a/roles/me/tasks/main.yml
+++ b/roles/me/tasks/main.yml
@@ -25,9 +25,9 @@
 
 - name: files in dotfiles are symbolic link
   sudo_user: "{{user}}"
-  file: src={{item}} dest="/home/{{user}}/{{item|basename|replace('_', '.')}}" state=link
-  with_fileglob:
-    - /home/{{user}}/dotfiles/_*
+  shell: "for f in `ls /home/{{user}}/dotfiles/_*`; do ln -sf $f `basename $f | tr '_' '.'` ; done"
+  args:
+    creates: /home/{{user}}/.zshenv
 
 - name: projects directory is created
   sudo_user: "{{user}}"
