phpのインストールのタスクを追加

--- a/roles/php/tasks/main.yml
+++ b/roles/php/tasks/main.yml
@@ -55,3 +55,9 @@
     chdir: "/usr/local/src/php-{{php_version}}"
     creates: "/usr/local/src/php-{{php_version}}/config.status"
 
+- name: git is installed
+  shell: "make && make install"
+  args:
+    chdir: "/usr/local/src/php-{{php_version}}"
+    creates: "/usr/local/bin/php"
+
