--- a/roles/wordpress/tasks/main.yml
+++ b/roles/wordpress/tasks/main.yml
@@ -14,6 +14,7 @@
     creates: /usr/local/src/wordpress
 
 - name: random salts is fetched
+  sudo: false
   local_action: command curl https://api.wordpress.org/secret-key/1.1/salt/
   register: "wp_salt"
 
@@ -35,7 +36,7 @@
     creates: /var/www/wordpress
 
 - name: config file is copied
-  template: src=wp-config.php dest=/var/www/wordpress/
+  template: src=wp-config.php dest=/var/www/wordpress/wp-config.php
 
 - name: onwer is changed
   file: path=/var/www/wordpress/ owner=nginx group=nginx state=directory recurse=yes
